Award Borads Statues And other small modifications

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,12 @@
     <div class="logo">
       <a href="{{ site.baseurl }}"><img height="{{ site.logo.desktop_height }}" alt="{{ site.title }}" src="{{ site.logo.desktop | relative_url }}" /></a>
     </div>
+
     <div class="logo-mobile">
       <a href="{{ site.baseurl }}"><img alt="{{ site.title }}" src="{{ site.logo.mobile | relative_url }}" /></a>
     </div>
+    <h style="color:black;font-family: 'Playfair Display';
+    margin-left: 2rem;">The European Association of Software Science and Technology</h>
     {% include main-menu.html %}
     {% include hamburger.html %}
   </div>
