--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@ bodyClass: page-home
           {% endif %}
           <h2 class="feature-title">{{ feature.title }}</h2>
           <div class="feature-content">{{ feature.description }}</div>
-          <a href="{{feature.link}} "style="color: red; text-decoration: none; border-bottom: 2px solid red; margin-top: 10px;">Click here</a>
+          
         </div>
       </div>
       {% endfor %}
@@ -47,7 +47,7 @@ bodyClass: page-home
 </div>
 {% endif %}
 
-<div class="strip">
+<!-- <div class="strip">
   <div class="container pt-6 pb-6 pb-md-10">
     <div class="row justify-content-start">
       {% for service in site.services %}
@@ -69,4 +69,4 @@ bodyClass: page-home
       </div>
     </div>
   </div>
-</div>
+</div> -->
