--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -6,7 +6,7 @@
   padding-bottom: 60px;
   overflow: hidden;
   @include media-breakpoint-up(md) {
-    padding-top: 140px;
+    padding-top: 70px;
     padding-bottom: 140px;
   }
   h1 {
@@ -24,17 +24,18 @@
   }
   h2 {
     width: 80%;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     line-height: 1.4;
     margin-bottom: 30px;
     color: $black;
     font-family: $font-family-base;
   }
   p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: light;
-    line-height: 1.5;
-    color: $steel;
+    margin-top: 0.5rem;
+  
+    color: black;
     @include media-breakpoint-up(md) {
       width: 80%;
     }
