--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -3,16 +3,16 @@
 
   @include media-breakpoint-up(sm) {
     display: block;
+    img {
+      height: 70px;
+      max-width: unset;
+      /* Update the max-width property to increase the logo size */
+      max-width: 150px; /* Adjust the value to your desired size */
+    }
   }
-  img {
-    max-width: unset;
-  }
-  a {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
+  /* Rest of the CSS code */
 }
+
 .logo-mobile {
   display: block;
   width: 40px;
@@ -23,10 +23,8 @@
   img {
     width: 100%;
     height: auto;
+    /* Update the width property to increase the logo size */
+    width: 60px; /* Adjust the value to your desired size */
   }
-  a {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
+  /* Rest of the CSS code */
 }
