New Changes in style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
     <div class="logo-mobile">
       <a href="{{ site.baseurl }}"><img alt="{{ site.title }}" src="{{ site.logo.mobile | relative_url }}" /></a>
     </div>
-    <h style="color:black;font-family: 'Playfair Display';
-    margin-left: 2rem;">The European Association of Software Science and Technology</h>
+    <b style="color:#2a52be;font-size:medium;
+    margin-left: 0.1rem;">The European Association of Software Science and Technology</b>
     {% include main-menu.html %}
     {% include hamburger.html %}
   </div>
