--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -31,7 +31,7 @@
     color: cornflowerblue; /* Set the text color to a dark gray */
     text-align: left; /* Center the text within the element */
     font-weight: bold; /* Make the text bold */
-    text-transform: uppercase; /* Convert the text to uppercase */
+    /* Convert the text to uppercase */
     letter-spacing: 0.05em; /* Add some letter spacing */
     font-family: "Helvetica Neue", Arial, sans-serif; /* Use a different font */
     font-style: italic; /* Make the text italic */
