New Changes in style text

--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -34,7 +34,7 @@
     /* Convert the text to uppercase */
     letter-spacing: 0.05em; /* Add some letter spacing */
     font-family: "Helvetica Neue", Arial, sans-serif; /* Use a different font */
-    font-style: italic; /* Make the text italic */
+    font-style:normal; /* Make the text italic */
   }
   
   
