--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -20,8 +20,7 @@
     width: 100%;
     height: auto;
   }
-  .feature-title {
-  }
+ 
   
   .feature-content {
     margin-bottom: 0;
@@ -33,8 +32,8 @@
     font-weight: bold; /* Make the text bold */
     /* Convert the text to uppercase */
     letter-spacing: 0.05em; /* Add some letter spacing */
-    font-family: "Helvetica Neue", Arial, sans-serif; /* Use a different font */
-     /* Make the text italic */
+    /* Use a different font */
+   font-style:normal;
   }
   
   
