--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 60px;
   overflow: hidden;
   @include media-breakpoint-up(md) {
-    padding-top: 70px;
+    padding-top: 30px;
     padding-bottom: 140px;
   }
   h1 {
@@ -26,6 +26,7 @@
     width: 80%;
     font-size: 1.8rem;
     line-height: 1.4;
+    margin-top: 20px;
     margin-bottom: 30px;
     color: $black;
     font-family: $font-family-base;
