--- a/_sass/components/_feature.scss
+++ b/_sass/components/_feature.scss
@@ -28,7 +28,7 @@
     font-size: 0.9em; /* Increase the font size */
     line-height: 1.5; /* Add some extra line height */
     color: cornflowerblue; /* Set the text color to a dark gray */
-    text-align: left; /* Center the text within the element */
+    text-align: center; /* Center the text within the element */
     font-weight: bold; /* Make the text bold */
     /* Convert the text to uppercase */
     letter-spacing: 0.05em; /* Add some letter spacing */
