--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class='header'>
-  <div class="container">
+  <div class="con">
     <div class="logo">
       <a href="{{ site.baseurl }}"><img height="{{ site.logo.desktop_height }}" alt="{{ site.title }}" src="{{ site.logo.desktop | relative_url }}" /></a>
     </div>
@@ -8,7 +8,7 @@
       <a href="{{ site.baseurl }}"><img alt="{{ site.title }}" src="{{ site.logo.mobile | relative_url }}" /></a>
     </div>
     <b style="color:#2a52be;font-size:medium;
-    margin-left: 0.1rem;">The European Association of Software Science and Technology</b>
+   margin-right: 5rem;;">The European Association of Software Science and Technology</b>
     {% include main-menu.html %}
     {% include hamburger.html %}
   </div>
