--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -7,7 +7,8 @@
       height: 70px;
       max-width: unset;
       /* Update the max-width property to increase the logo size */
-      max-width: 150px; /* Adjust the value to your desired size */
+      max-width: 150px;
+      margin-left: 2rem; /* Adjust the value to your desired size */
     }
   }
   /* Rest of the CSS code */
