--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -20,7 +20,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 0; /* Set margin to 0 to remove any default margins */
-    width: 1300px; /* Increase the width to 1200px or any desired value */
+    width: 100%; /* Increase the width to 1200px or any desired value */
     /* box-sizing: content-box; // Uncomment this if needed */
   }
 
