--- a/_layouts/awards.html
+++ b/_layouts/awards.html
@@ -2,6 +2,7 @@
 layout: default
 bodyClass: page-awards-list
 ---
+
 <style>
   ul.navbar-horizontal {
     list-style: none;
@@ -13,7 +14,13 @@ bodyClass: page-awards-list
     display: inline-block;
     margin-right: 1rem;
     margin-left: 1rem;
-    margin-top: 1rem
+    margin-top: 1rem;
+  }
+  .important-announcement {
+    background-color: #f8d7da;
+    padding: 10px;
+    margin-top: 1rem;
+    border-radius: 5px;
   }
 </style>
 
@@ -34,14 +41,13 @@ bodyClass: page-awards-list
       </div>
       {% if page.intro_image %}
       <div class="col-12 col-md-4 col-lg-5 order-1 order-md-2 position-relative">
-        <img alt={{ page.title }} class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relative_url }}" />
+        <img alt="{{ page.title }}" class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relative_url }}" />
+        <div class="important-announcement">
+          <h4>Important Announcement</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ultrices dolor non mauris mattis, quis ultrices velit semper.</p>
+        </div>
       </div>
       {% endif %}
     </div>
   </div>
 </div>
-
-
-
-
-
