--- a/_layouts/awards.html
+++ b/_layouts/awards.html
@@ -44,7 +44,7 @@ bodyClass: page-awards-list
         <img alt="{{ page.title }}" class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relative_url }}" />
         <div class="important-announcement">
           <h4>Important Announcement</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ultrices dolor non mauris mattis, quis ultrices velit semper.</p>
+          <p>Announcement would be available here</p>
         </div>
       </div>
       {% endif %}
