--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -142,9 +142,9 @@ bodyClass: page-home
       <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
         <div class="intro-image-container">
           <img alt="Slide 1" class="intro-slide active" src="{{ page.intro_image | relURL }}" />
-          <img alt="Slide 2" class="intro-slide" src="{{ '/images/illustrations/europe1.jpg' }}" />
-          <img alt="Slide 3" class="intro-slide" src="{{ '/images/illustrations/europe5.jpg' }}" />
-          <img alt="Slide 4" class="intro-slide" src="{{ '/images/illustrations/europe6.jpg' }}" />
+          <img alt="Slide 2" class="intro-slide" src="{{ '/images/illustrations/home.png' }}" />
+          <img alt="Slide 3" class="intro-slide" src="{{ '/images/illustrations/homer.png' }}" />
+          <img alt="Slide 4" class="intro-slide" src="{{ '/images/illustrations/uol.png' }}" />
           <!-- Add more images as needed -->
         </div>
         <div class="arrow-buttons">
