--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -142,7 +142,8 @@ bodyClass: page-home
       <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
         <div class="intro-image-container">
           <img alt="Slide 1" class="intro-slide active" src="{{ page.intro_image | relURL }}" />
-          <img  class="intro-slide" src="{{ '/images/illustrations/award.jpg' }}" />
+          <img class="intro-slide" src="{{ site.baseurl }}/images/illustrations/award.jpg" alt="Slide 1">
+
      
           <!-- Add more images as needed -->
         </div>
