--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -151,7 +151,7 @@ bodyClass: page-home
         <div class="arrow-buttons">
           <button class="arrow-button prev-button" onclick="prevSlide()">&#10094;</button>
           <button class="arrow-button next-button" onclick="nextSlide()">&#10095;</button>
-          </div>.3.3
+          </div>
       </div>
       {% endif %}
     </div>
