--- a/_layouts/awards.html
+++ b/_layouts/awards.html
@@ -42,10 +42,10 @@ bodyClass: page-awards-list
       {% if page.intro_image %}
       <div class="col-12 col-md-4 col-lg-5 order-1 order-md-2 position-relative">
         <img alt="{{ page.title }}" class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relative_url }}" />
-        <div class="important-announcement">
+{%      <div class="important-announcement">
           <h4>Important Announcement</h4>
-          <p>Announcement would be available here</p>
-        </div>
+          <p>Announcement would be available here</p> 
+        </div> %}
       </div>
       {% endif %}
     </div>
