--- a/_layouts/awards.html
+++ b/_layouts/awards.html
@@ -34,20 +34,16 @@ bodyClass: page-awards-list
 </ul>
 
 <div class="intro">
-  <div class="container">
-    <div class="row justify-content-start">
-      <div class="col-12 col-md-8 col-lg-7 order-2 order-md-1">
-        {{ content }}
-      </div>
-      {% if page.intro_image %}
-      <div class="col-12 col-md-4 col-lg-5 order-1 order-md-2 position-relative">
-        <img alt="{{ page.title }}" class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relative_url }}" />
-<!--      <div class="important-announcement">
-          <h4>Important Announcement</h4>
-          <p>Announcement would be available here</p> 
-        </div> -->
-      </div>
-      {% endif %}
-    </div>
-  </div>
+   <div class="container">
+     <div class="row justify-content-start">
+       {% if page.intro_image %}
+       <div class="col-12">
+         <img alt="{{ page.title }}" class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image }}" />
+       </div>
+       {% endif %}
+       <div class="col-12 col-md-8 col-lg-7">
+         {{ content }}
+       </div>
+     </div>
+   </div>
 </div>
